# hermetica

./: .gitignore  Cargo.toml  DESIGN_NOTES.md  README.md  build.rs
src/: cypher.txt  decypher.txt  file.txt  main.rs
src/aes/: aesni_decrypt_block.s  aesni_encrypt_block.s  aesni_gen_key_schedule.s  aesni_gen_key_schedule_decrypt.s  mod.rs  pclmul_gf.s
src/aes/aes_ni/: mod.rs
src/aes/aes_ni/asm/: aesni_decrypt_block.s  aesni_gen_decryption_key_schedule.s  aesni_gen_encryption_key_schedule.s
src/aes/gcm/: mod.rs
src/aes/gcm/clmul/: mod.rs
src/aes/gcm/clmul/asm/: clmul_gf.s
test_files/: 16bytes
