[package]
name = "hermetica"
version = "0.1.0"
authors = ["Alejandro Cadarso <acadarsotp@gmail.com>"]
license = "GPLv3"
license-file = "LICENSE.txt"
description = "Hardware accelerated file encryption/decryption"
readme = "README.md"
repository = "https://github.com/cdrso/hermetica"
keywords = ["cli", "file encryption"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
rand = "0.8.5"
bytemuck = "1.16.1"
rpassword = "7.3.1"
indicatif = "0.17.8"
zeroize = "1.8.1"
tempfile = "3.10.1"
sha256 = "1.5.0"

[build-dependencies]
nasm-rs = "0.3.0"
cc = "1.0.99"


